# DeepSC-A2G

./: .env.example  .gitignore  Makefile  pyproject.toml  readme.md  requirements.txt
docs/: notes.md
scripts/: evaluate.py  preprocess.py  train.py
src/: config.py  dataset.py  main.py  performance.py  preprocess_text.py  utils.py
src/deepsc/: __init__.py  config.py  decoding.py  metrics.py  signal.py
src/deepsc/channels/: __init__.py  wireless.py
src/deepsc/data/: __init__.py  dataset.py
src/deepsc/models/: __init__.py  masking.py  mutual_info.py  transceiver.py  transformer.py
src/deepsc/training/: __init__.py  engine.py  losses.py  optim.py
tools/: plot_curve.py  quick_eval.py
