[project]
name = "deepsc"
version = "0.1.0"
description = "Deep Learning Enabled Semantic Communication Systems (PyTorch implementation)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Dankao Chen" }]
dependencies = [
    "torch",
    "numpy",
    "nltk",
    "w3lib",
    "tqdm",
    "scikit-learn",
    "bert4keras==0.11.5",
    "python-dotenv",
    "matplotlib>=3.11.0",
]

[tool.uv]
# This is a collection of training/eval scripts, not an installable package,
# so uv should not try to build or install the project itself.
package = false
