[project]
name = "deepsc"
version = "0.1.0"
description = "Deep Learning Enabled Semantic Communication Systems (PyTorch implementation)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Dankao Chen" }]
dependencies = [
    "torch",
    "numpy",
    "nltk",
    "w3lib",
    "tqdm",
    "python-dotenv",
    "matplotlib>=3.11.0",
]

# The project is now an installable package (src/deepsc), installed editable by
# `uv sync` so `from deepsc.models import DeepSC` resolves from any directory.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deepsc"]
